Arquivos do repositorio que apresentou erro no envio

--- a/PP-P002/exercicio02/exercicio02.ipynb
+++ b/PP-P002/exercicio02/exercicio02.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -17,121 +17,158 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Lista de Tarefas:\n",
+      "===== ToDoList =====\n",
       "1. Listar tarefas\n",
       "2. Registrar nova tarefa\n",
       "3. Marcar tarefa como concluída\n",
       "4. Editar tarefa\n",
+      "5. Salvar tarefas em arquivo\n",
+      "6. Carregar tarefas de arquivo\n",
       "0. Sair\n",
-      "Tarefa registrada com sucesso!\n",
+      "Tarefa registrada!!!\n",
       "\n",
-      "Lista de Tarefas:\n",
+      "===== ToDoList =====\n",
       "1. Listar tarefas\n",
       "2. Registrar nova tarefa\n",
       "3. Marcar tarefa como concluída\n",
       "4. Editar tarefa\n",
+      "5. Salvar tarefas em arquivo\n",
+      "6. Carregar tarefas de arquivo\n",
       "0. Sair\n",
-      "Tarefa registrada com sucesso!\n",
+      "Tarefa registrada!!!\n",
       "\n",
-      "Lista de Tarefas:\n",
+      "===== ToDoList =====\n",
       "1. Listar tarefas\n",
       "2. Registrar nova tarefa\n",
       "3. Marcar tarefa como concluída\n",
       "4. Editar tarefa\n",
+      "5. Salvar tarefas em arquivo\n",
+      "6. Carregar tarefas de arquivo\n",
       "0. Sair\n",
-      "Saindo da Lista de Tarefas!!\n"
+      "Tarefa marcada como concluída!\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "5. Salvar tarefas em arquivo\n",
+      "6. Carregar tarefas de arquivo\n",
+      "0. Sair\n",
+      "Lista de tarefas:\n",
+      "1. Levar o lixo [x]\n",
+      "2. Levar daniel no parquinho [ ]\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "5. Salvar tarefas em arquivo\n",
+      "6. Carregar tarefas de arquivo\n",
+      "0. Sair\n",
+      "Lista de tarefas salva com sucesso!\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "5. Salvar tarefas em arquivo\n",
+      "6. Carregar tarefas de arquivo\n",
+      "0. Sair\n"
      ]
     }
    ],
    "source": [
-    "ARQUIVO_TAREFAS = \"tarefas.txt\"\n",
+    "import pickle\n",
+    "\n",
+    "class ToDoList:\n",
+    "    def __init__(self):\n",
+    "        self.tarefa = []\n",
+    "\n",
+    "    def lista_tarefas(self):\n",
+    "        print(\"Lista de tarefas:\")\n",
+    "        for tarefa in self.tarefa:\n",
+    "            status = \"[x]\" if tarefa[\"completa\"] else \"[ ]\"\n",
+    "            print(f\"{tarefa['id']}. {tarefa['descrição']} {status}\")\n",
+    "\n",
+    "    def registrar_tarefa(self):\n",
+    "        descrição = input(\"Digite a descrição da tarefa: \").capitalize()\n",
+    "        tarefa = {\"id\": len(self.tarefa) + 1, \"descrição\": descrição, \"completa\": False}\n",
+    "        self.tarefa.append(tarefa)\n",
+    "        print(\"Tarefa registrada!!!\")\n",
+    "\n",
+    "    def marcar_tarefa_completa(self):\n",
+    "        tarefa_id = int(input(\"Digite o ID da tarefa: \"))\n",
+    "        for tarefa in self.tarefa:\n",
+    "            if tarefa[\"id\"] == tarefa_id and not tarefa[\"completa\"]:\n",
+    "                tarefa[\"completa\"] = True\n",
+    "                self.tarefa.remove(tarefa)\n",
+    "                self.tarefa.insert(0, tarefa)\n",
+    "                print(\"Tarefa marcada como concluída!\")\n",
+    "                return\n",
+    "        print(\"Tarefa não encontrada ou já concluída.\")\n",
+    "\n",
+    "    def editar_tarefa(self):\n",
+    "        tarefa_id = int(input(\"Digite o ID da tarefa: \"))\n",
+    "        for tarefa in self.tarefa:\n",
+    "            if tarefa[\"id\"] == tarefa_id:\n",
+    "                new_description = input(\"Digite a nova descrição da tarefa: \").capitalize()\n",
+    "                tarefa[\"descrição\"] = new_description\n",
+    "                print(\"Tarefa editada!\")\n",
+    "                return\n",
+    "        print(\"Tarefa não encontrada.\")\n",
+    "\n",
+    "    def salvar_tarefa(self, filename):\n",
+    "        with open(filename, \"wb\") as file:\n",
+    "            pickle.dump(self.tarefa, file)\n",
+    "        print(\"Lista de tarefas salva com sucesso!\")\n",
+    "\n",
+    "    def carregar_tarefa(self, filename):\n",
+    "        try:\n",
+    "            with open(filename, \"rb\") as file:\n",
+    "                self.tarefa = pickle.load(file)\n",
+    "            print(\"Lista de tarefas carregada com sucesso!\")\n",
+    "        except FileNotFoundError:\n",
+    "            print(\"Arquivo não encontrado. Nenhuma lista de tarefas encontrada.\")\n",
+    "\n",
+    "    def run(self):\n",
+    "        while True:\n",
+    "            print(\"\\n===== ToDoList =====\")\n",
+    "            print(\"1. Listar tarefas\")\n",
+    "            print(\"2. Registrar nova tarefa\")\n",
+    "            print(\"3. Marcar tarefa como concluída\")\n",
+    "            print(\"4. Editar tarefa\")\n",
+    "            print(\"5. Salvar tarefas em arquivo\")\n",
+    "            print(\"6. Carregar tarefas de arquivo\")\n",
+    "            print(\"0. Sair\")\n",
+    "\n",
+    "            choice = input(\"Escolha uma opção: \")\n",
+    "\n",
+    "            if choice == \"1\":\n",
+    "                self.lista_tarefas()\n",
+    "            elif choice == \"2\":\n",
+    "                self.registrar_tarefa()\n",
+    "            elif choice == \"3\":\n",
+    "                self.marcar_tarefa_completa()\n",
+    "            elif choice == \"4\":\n",
+    "                self.editar_tarefa()\n",
+    "            elif choice == \"5\":\n",
+    "                filename = input(\"Digite o nome do arquivo para salvar as tarefas: \")\n",
+    "                self.salvar_tarefa(filename)\n",
+    "            elif choice == \"6\":\n",
+    "                filename = input(\"Digite o nome do arquivo para carregar as tarefas: \")\n",
+    "                self.carregar_tarefa(filename)\n",
+    "            elif choice == \"0\":\n",
+    "                break\n",
+    "            else:\n",
+    "                print(\"Opção inválida. Tente novamente.\")\n",
     "\n",
     "\n",
-    "def carregar_tarefas():\n",
-    "    try:\n",
-    "        with open(ARQUIVO_TAREFAS, \"r\") as arquivo:\n",
-    "            return arquivo.readlines()\n",
-    "    except FileNotFoundError:\n",
-    "        return []\n",
-    "\n",
-    "def salvar_tarefas(tarefas):\n",
-    "    with open(ARQUIVO_TAREFAS, \"w\") as arquivo:\n",
-    "        arquivo.writelines(tarefas)\n",
-    "\n",
-    "def listar_tarefas():\n",
-    "    lista_tarefas = carregar_tarefas()\n",
-    "    if not lista_tarefas:\n",
-    "        print(\"Não tem Tarefas registradas!!\")\n",
-    "        return\n",
-    "    print(\"Lista de tarefas: \")\n",
-    "    for id, tarefa in enumerate(lista_tarefas, start=1):\n",
-    "        print(f\"{id}. {tarefa}\")\n",
-    "        \n",
-    "def registrar_nova_tarefa():\n",
-    "    descricao_tarefa = input(\"Informe a descrição da tarefa: \").capitalize() ## capitalizer para deixar a string no padrao\n",
-    "    lista_tarefas = carregar_tarefas()\n",
-    "    tarefa = f\"{len(lista_tarefas)+1}. {descricao_tarefa} [ ]\\n\"\n",
-    "    lista_tarefas.append(tarefa)\n",
-    "    salvar_tarefas(lista_tarefas)\n",
-    "    print(\"Tarefa registrada com sucesso!\")\n",
-    "    \n",
-    "def check_tarefa(): \n",
-    "    listar_tarefas()\n",
-    "    identificador = int(input(\"Informe o id da tarefa que voce deseja marcar como concluída? \"))\n",
-    "    lista_tarefas = carregar_tarefas()\n",
-    "    isIdentificarInList = 1 <= identificador <= len(lista_tarefas)\n",
-    "    if isIdentificarInList:\n",
-    "        tarefa = lista_tarefas.pop(identificador - 1)\n",
-    "        tarefa = tarefa.replace(\"[ ]\", \"[X]\")\n",
-    "        lista_tarefas.insert(0, tarefa)\n",
-    "        salvar_tarefas(lista_tarefas)\n",
-    "        print(\"A Tarefa foi marcada como concluida !!\")\n",
-    "    else:\n",
-    "        print(\"ERRO: O Id informado não existe na lista !!!\")\n",
-    "\n",
-    "def editar_tarefa():\n",
-    "    lista_tarefas = carregar_tarefas()\n",
-    "    listar_tarefas()\n",
-    "    identificador = int(input(\"Informe o id da tarefa que voce deseja editar? \"))\n",
-    "    isIdentificarInList = 1 <= identificador <= len(lista_tarefas)\n",
-    "    if isIdentificarInList:\n",
-    "        tarefa = lista_tarefas.pop(identificador - 1)\n",
-    "        nova_tarefa = input(\"Qual é a nova descrição da tarefa? \")\n",
-    "        tarefa = f\"{identificador}. {nova_tarefa} [ ]\"\n",
-    "        lista_tarefas.insert(0, tarefa)\n",
-    "        salvar_tarefas(lista_tarefas)\n",
-    "        print(\"Tarefa editada com sucesso!\")\n",
-    "    else:\n",
-    "        print(\"ERRO: O Id informado não existe na lista !!!\")\n",
-    "    \n",
-    "def main():\n",
-    "    while True:\n",
-    "        print(\"\\nLista de Tarefas:\")\n",
-    "        print(\"1. Listar tarefas\")\n",
-    "        print(\"2. Registrar nova tarefa\")\n",
-    "        print(\"3. Marcar tarefa como concluída\")\n",
-    "        print(\"4. Editar tarefa\")\n",
-    "        print(\"0. Sair\")\n",
-    "        escolha = input(\"Escolha uma opção: \")\n",
-    "        \n",
-    "        if escolha == \"1\":\n",
-    "            listar_tarefas()\n",
-    "        elif escolha == \"2\":\n",
-    "            registrar_nova_tarefa()\n",
-    "        elif escolha == \"3\":\n",
-    "            check_tarefa()\n",
-    "        elif escolha == \"4\":\n",
-    "            editar_tarefa()\n",
-    "        elif escolha == \"0\":\n",
-    "            print(\"Saindo da Lista de Tarefas!!\")\n",
-    "            break\n",
-    "        else:\n",
-    "            print(\"Opção inválida, tente novamente!!\")\n",
-    "        \n",
-    "        input(\"Pressione Enter para continuar...\")\n",
-    "        \n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "# Instanciar e executar o aplicativo\n",
+    "app = ToDoList()\n",
+    "app.run()"
    ]
   }
  ],
