--- a/PP-P002/exercicio01/exercicio01.ipynb
+++ b/PP-P002/exercicio01/exercicio01.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h1>Exercício 1: Utilizando estruturas de controle de fluxo e listas.</h1>\n",
-    "<p>Para controlar os compromissos do dia a dia podemos utilizar um uma lista de tarefas. Com alguns dos recursos básicos da linguagem que já conhecemos podemos implementar o aplicativo ToDoList que permita:</p>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -18,144 +10,239 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Lista de Tarefas:\n",
+      "===== ToDoList =====\n",
       "1. Listar tarefas\n",
       "2. Registrar nova tarefa\n",
       "3. Marcar tarefa como concluída\n",
       "4. Editar tarefa\n",
       "0. Sair\n",
-      "Tarefa registrada com sucesso!\n",
+      "Tarefa registrada!!!\n",
       "\n",
-      "Lista de Tarefas:\n",
+      "===== ToDoList =====\n",
       "1. Listar tarefas\n",
       "2. Registrar nova tarefa\n",
       "3. Marcar tarefa como concluída\n",
       "4. Editar tarefa\n",
       "0. Sair\n",
-      "Tarefa registrada com sucesso!\n",
+      "Tarefa registrada!!!\n",
       "\n",
-      "Lista de Tarefas:\n",
+      "===== ToDoList =====\n",
       "1. Listar tarefas\n",
       "2. Registrar nova tarefa\n",
       "3. Marcar tarefa como concluída\n",
       "4. Editar tarefa\n",
       "0. Sair\n",
-      "Tarefa registrada com sucesso!\n",
+      "Tarefa marcada como concluída!\n",
       "\n",
-      "Lista de Tarefas:\n",
+      "===== ToDoList =====\n",
       "1. Listar tarefas\n",
       "2. Registrar nova tarefa\n",
       "3. Marcar tarefa como concluída\n",
       "4. Editar tarefa\n",
       "0. Sair\n",
-      "Lista de tarefas: \n",
-      "1. 1. Limpar a casa [ ]\n",
-      "2. 2. Dar banho no cachorro [ ]\n",
-      "3. 3. Terminar a atividade [ ]\n",
+      "Lista de tarefas:\n",
+      "1. Retirar lixo [x]\n",
+      "2. Levar dan na piscina [ ]\n",
       "\n",
-      "Lista de Tarefas:\n",
+      "===== ToDoList =====\n",
       "1. Listar tarefas\n",
       "2. Registrar nova tarefa\n",
       "3. Marcar tarefa como concluída\n",
       "4. Editar tarefa\n",
       "0. Sair\n",
-      "Lista de tarefas: \n",
-      "1. 1. Limpar a casa [ ]\n",
-      "2. 2. Dar banho no cachorro [ ]\n",
-      "3. 3. Terminar a atividade [ ]\n",
-      "A Tarefa foi marcada como concluida !!\n",
+      "Lista de tarefas:\n",
+      "1. Retirar lixo [x]\n",
+      "2. Levar dan na piscina [ ]\n",
       "\n",
-      "Lista de Tarefas:\n",
+      "===== ToDoList =====\n",
       "1. Listar tarefas\n",
       "2. Registrar nova tarefa\n",
       "3. Marcar tarefa como concluída\n",
       "4. Editar tarefa\n",
       "0. Sair\n",
-      "Lista de tarefas: \n",
-      "1. 1. Limpar a casa [X]\n",
-      "2. 2. Dar banho no cachorro [ ]\n",
-      "3. 3. Terminar a atividade [ ]\n",
+      "Tarefa editada!\n",
       "\n",
-      "Lista de Tarefas:\n",
+      "===== ToDoList =====\n",
       "1. Listar tarefas\n",
       "2. Registrar nova tarefa\n",
       "3. Marcar tarefa como concluída\n",
       "4. Editar tarefa\n",
       "0. Sair\n",
-      "Saindo da Lista de Tarefas!!\n"
+      "Lista de tarefas:\n",
+      "1. Remover o lixo [x]\n",
+      "2. Levar dan na piscina [ ]\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "0. Sair\n",
+      "Opção inválida. Tente novamente.\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "0. Sair\n",
+      "Opção inválida. Tente novamente.\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "0. Sair\n",
+      "Opção inválida. Tente novamente.\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "0. Sair\n",
+      "Opção inválida. Tente novamente.\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "0. Sair\n",
+      "Opção inválida. Tente novamente.\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "0. Sair\n",
+      "Opção inválida. Tente novamente.\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "0. Sair\n",
+      "Opção inválida. Tente novamente.\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "0. Sair\n",
+      "Opção inválida. Tente novamente.\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "0. Sair\n",
+      "Opção inválida. Tente novamente.\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "0. Sair\n",
+      "Opção inválida. Tente novamente.\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "0. Sair\n",
+      "Opção inválida. Tente novamente.\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "0. Sair\n",
+      "Opção inválida. Tente novamente.\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "0. Sair\n"
      ]
     }
    ],
    "source": [
-    "lista_tarefas = []\n",
+    "class ToDoList:\n",
+    "    def __init__(self):\n",
+    "        self.tarefas = []\n",
     "\n",
-    "def listar_tarefas():\n",
-    "    if not lista_tarefas:\n",
-    "        print(\"Não tem Tarefas registradas!!\")\n",
-    "        return\n",
-    "    print(\"Lista de tarefas: \")\n",
-    "    for id, tarefa in enumerate(lista_tarefas, start=1):\n",
-    "        print(f\"{id}. {tarefa}\")\n",
-    "        \n",
-    "def registrar_nova_tarefa():\n",
-    "    descricao_tarefa = input(\"Informe a descrição da tarefa: \").capitalize() ## capitalizer para deixar a string no padrao\n",
-    "    tarefa = f\"{len(lista_tarefas)+1}. {descricao_tarefa} [ ]\"\n",
-    "    lista_tarefas.append(tarefa)\n",
-    "    print(\"Tarefa registrada com sucesso!\")\n",
-    "    \n",
-    "def check_tarefa(): \n",
-    "    listar_tarefas()\n",
-    "    identificador = int(input(\"Informe o id da tarefa que voce deseja marcar como concluída? \"))\n",
-    "    isIdentificarInList = 1 <= identificador <= len(lista_tarefas)\n",
-    "    if isIdentificarInList:\n",
-    "        tarefa = lista_tarefas.pop(identificador - 1)\n",
-    "        tarefa = tarefa.replace(\"[ ]\", \"[X]\")\n",
-    "        lista_tarefas.insert(0, tarefa)\n",
-    "        print(\"A Tarefa foi marcada como concluida !!\")\n",
-    "    else:\n",
-    "        print(\"ERRO: O Id informado não existe na lista !!!\")\n",
+    "    def lista_tarefas(self):\n",
+    "        print(\"Lista de tarefas:\")\n",
+    "        for tarefa in self.tarefas:\n",
+    "            status = \"[x]\" if tarefa[\"completa\"] else \"[ ]\"\n",
+    "            print(f\"{tarefa['id']}. {tarefa['descrição']} {status}\")\n",
     "\n",
-    "def editar_tarefa():\n",
-    "    listar_tarefas()\n",
-    "    identificador = int(input(\"Informe o id da tarefa que voce deseja editar? \"))\n",
-    "    isIdentificarInList = 1 <= identificador <= len(lista_tarefas)\n",
-    "    if isIdentificarInList:\n",
-    "        tarefa = lista_tarefas.pop(identificador - 1)\n",
-    "        nova_tarefa = input(\"Qual é a nova descrição da tarefa? \")\n",
-    "        tarefa = f\"{identificador}. {nova_tarefa} [ ]\"\n",
-    "        lista_tarefas.insert(0, tarefa)\n",
-    "        print(\"Tarefa editada com sucesso!\")\n",
-    "    else:\n",
-    "        print(\"ERRO: O Id informado não existe na lista !!!\")\n",
-    "    \n",
-    "def main():\n",
-    "    while True:\n",
-    "        print(\"\\nLista de Tarefas:\")\n",
-    "        print(\"1. Listar tarefas\")\n",
-    "        print(\"2. Registrar nova tarefa\")\n",
-    "        print(\"3. Marcar tarefa como concluída\")\n",
-    "        print(\"4. Editar tarefa\")\n",
-    "        print(\"0. Sair\")\n",
-    "        escolha = input(\"Escolha uma opção: \")\n",
-    "        \n",
-    "        if escolha == \"1\":\n",
-    "            listar_tarefas()\n",
-    "        elif escolha == \"2\":\n",
-    "            registrar_nova_tarefa()\n",
-    "        elif escolha == \"3\":\n",
-    "            check_tarefa()\n",
-    "        elif escolha == \"4\":\n",
-    "            editar_tarefa()\n",
-    "        elif escolha == \"0\":\n",
-    "            print(\"Saindo da Lista de Tarefas!!\")\n",
-    "            break\n",
-    "        else:\n",
-    "            print(\"Opção inválida, tente novamente!!\")\n",
-    "        \n",
-    "        input(\"Pressione Enter para continuar...\")\n",
-    "        \n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "    def registrar_tarefa(self):\n",
+    "        descrição = input(\"Digite a descrição da tarefa: \").capitalize()\n",
+    "        tarefa = {\"id\": len(self.tarefas) + 1, \"descrição\": descrição, \"completa\": False}\n",
+    "        self.tarefas.append(tarefa)\n",
+    "        print(\"Tarefa registrada!!!\")\n",
+    "\n",
+    "    def marcar_tarefa_completa(self):\n",
+    "        task_id = int(input(\"Digite o ID da tarefa: \"))\n",
+    "        for tarefa in self.tarefas:\n",
+    "            if tarefa[\"id\"] == task_id and not tarefa[\"completa\"]:\n",
+    "                tarefa[\"completa\"] = True\n",
+    "                self.tarefas.remove(tarefa)\n",
+    "                self.tarefas.insert(0, tarefa)\n",
+    "                print(\"Tarefa marcada como concluída!\")\n",
+    "                return\n",
+    "        print(\"Tarefa não encontrada ou já concluída.\")\n",
+    "\n",
+    "    def editar_tarefa(self):\n",
+    "        task_id = int(input(\"Digite o ID da tarefa: \"))\n",
+    "        for tarefa in self.tarefas:\n",
+    "            if tarefa[\"id\"] == task_id:\n",
+    "                new_description = input(\"Digite a nova descrição da tarefa: \").capitalize()\n",
+    "                tarefa[\"descrição\"] = new_description\n",
+    "                print(\"Tarefa editada!\")\n",
+    "                return\n",
+    "        print(\"Tarefa não encontrada.\")\n",
+    "\n",
+    "    def run(self):\n",
+    "        while True:\n",
+    "            print(\"\\n===== ToDoList =====\")\n",
+    "            print(\"1. Listar tarefas\")\n",
+    "            print(\"2. Registrar nova tarefa\")\n",
+    "            print(\"3. Marcar tarefa como concluída\")\n",
+    "            print(\"4. Editar tarefa\")\n",
+    "            print(\"0. Sair\")\n",
+    "\n",
+    "            choice = input(\"Escolha uma opção: \")\n",
+    "\n",
+    "            if choice == \"1\":\n",
+    "                self.lista_tarefas()\n",
+    "            elif choice == \"2\":\n",
+    "                self.registrar_tarefa()\n",
+    "            elif choice == \"3\":\n",
+    "                self.marcar_tarefa_completa()\n",
+    "            elif choice == \"4\":\n",
+    "                self.editar_tarefa()\n",
+    "            elif choice == \"0\":\n",
+    "                break\n",
+    "            else:\n",
+    "                print(\"Opção inválida. Tente novamente.\")\n",
+    "\n",
+    "\n",
+    "# Instanciar e executar o aplicativo\n",
+    "app = ToDoList()\n",
+    "app.run()"
    ]
   }
  ],
