--- a/PP-P002/exercicio02/exercicio02.ipynb
+++ b/PP-P002/exercicio02/exercicio02.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,8 +24,14 @@
       "4. Editar tarefa\n",
       "5. Salvar tarefas em arquivo\n",
       "6. Carregar tarefas de arquivo\n",
-      "0. Sair\n",
-      "Tarefa registrada!!!\n",
+      "0. Sair\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista de tarefas:\n",
       "\n",
       "===== ToDoList =====\n",
       "1. Listar tarefas\n",
@@ -35,17 +41,7 @@
       "5. Salvar tarefas em arquivo\n",
       "6. Carregar tarefas de arquivo\n",
       "0. Sair\n",
-      "Tarefa registrada!!!\n",
-      "\n",
-      "===== ToDoList =====\n",
-      "1. Listar tarefas\n",
-      "2. Registrar nova tarefa\n",
-      "3. Marcar tarefa como concluída\n",
-      "4. Editar tarefa\n",
-      "5. Salvar tarefas em arquivo\n",
-      "6. Carregar tarefas de arquivo\n",
-      "0. Sair\n",
-      "Tarefa marcada como concluída!\n",
+      "Lista de tarefas carregada com sucesso!\n",
       "\n",
       "===== ToDoList =====\n",
       "1. Listar tarefas\n",
@@ -67,7 +63,31 @@
       "5. Salvar tarefas em arquivo\n",
       "6. Carregar tarefas de arquivo\n",
       "0. Sair\n",
-      "Lista de tarefas salva com sucesso!\n",
+      "Tarefa editada!\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "5. Salvar tarefas em arquivo\n",
+      "6. Carregar tarefas de arquivo\n",
+      "0. Sair\n",
+      "Lista de tarefas:\n",
+      "1. Levar o lixo às 20:00 [x]\n",
+      "2. Levar daniel no parquinho [ ]\n",
+      "\n",
+      "===== ToDoList =====\n",
+      "1. Listar tarefas\n",
+      "2. Registrar nova tarefa\n",
+      "3. Marcar tarefa como concluída\n",
+      "4. Editar tarefa\n",
+      "5. Salvar tarefas em arquivo\n",
+      "6. Carregar tarefas de arquivo\n",
+      "0. Sair\n",
+      "Lista de tarefas:\n",
+      "1. Levar o lixo às 20:00 [x]\n",
+      "2. Levar daniel no parquinho [ ]\n",
       "\n",
       "===== ToDoList =====\n",
       "1. Listar tarefas\n",
@@ -77,6 +97,20 @@
       "5. Salvar tarefas em arquivo\n",
       "6. Carregar tarefas de arquivo\n",
       "0. Sair\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\wilto\\Desktop\\Residencia TIC18\\Introdução a Trilha\\Python\\PP-PO02\\python_t3_praticas\\PP-P002\\exercicio02\\exercicio02.ipynb Célula 2\u001b[0m line \u001b[0;36m8\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/wilto/Desktop/Residencia%20TIC18/Introdu%C3%A7%C3%A3o%20a%20Trilha/Python/PP-PO02/python_t3_praticas/PP-P002/exercicio02/exercicio02.ipynb#W2sZmlsZQ%3D%3D?line=85'>86</a>\u001b[0m \u001b[39m# Instanciar e executar o aplicativo\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/wilto/Desktop/Residencia%20TIC18/Introdu%C3%A7%C3%A3o%20a%20Trilha/Python/PP-PO02/python_t3_praticas/PP-P002/exercicio02/exercicio02.ipynb#W2sZmlsZQ%3D%3D?line=86'>87</a>\u001b[0m app \u001b[39m=\u001b[39m ToDoList()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/wilto/Desktop/Residencia%20TIC18/Introdu%C3%A7%C3%A3o%20a%20Trilha/Python/PP-PO02/python_t3_praticas/PP-P002/exercicio02/exercicio02.ipynb#W2sZmlsZQ%3D%3D?line=87'>88</a>\u001b[0m app\u001b[39m.\u001b[39mrun()\n",
+      "\u001b[1;32mc:\\Users\\wilto\\Desktop\\Residencia TIC18\\Introdução a Trilha\\Python\\PP-PO02\\python_t3_praticas\\PP-P002\\exercicio02\\exercicio02.ipynb Célula 2\u001b[0m line \u001b[0;36m6\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/wilto/Desktop/Residencia%20TIC18/Introdu%C3%A7%C3%A3o%20a%20Trilha/Python/PP-PO02/python_t3_praticas/PP-P002/exercicio02/exercicio02.ipynb#W2sZmlsZQ%3D%3D?line=60'>61</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m6. Carregar tarefas de arquivo\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/wilto/Desktop/Residencia%20TIC18/Introdu%C3%A7%C3%A3o%20a%20Trilha/Python/PP-PO02/python_t3_praticas/PP-P002/exercicio02/exercicio02.ipynb#W2sZmlsZQ%3D%3D?line=61'>62</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m0. Sair\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/wilto/Desktop/Residencia%20TIC18/Introdu%C3%A7%C3%A3o%20a%20Trilha/Python/PP-PO02/python_t3_praticas/PP-P002/exercicio02/exercicio02.ipynb#W2sZmlsZQ%3D%3D?line=63'>64</a>\u001b[0m choice \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEscolha uma opção: \u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/wilto/Desktop/Residencia%20TIC18/Introdu%C3%A7%C3%A3o%20a%20Trilha/Python/PP-PO02/python_t3_praticas/PP-P002/exercicio02/exercicio02.ipynb#W2sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m \u001b[39mif\u001b[39;00m choice \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/wilto/Desktop/Residencia%20TIC18/Introdu%C3%A7%C3%A3o%20a%20Trilha/Python/PP-PO02/python_t3_praticas/PP-P002/exercicio02/exercicio02.ipynb#W2sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlista_tarefas()\n",
+      "File \u001b[1;32mc:\\Users\\wilto\\anaconda3\\envs\\DevWilton\\Lib\\site-packages\\ipykernel\\kernelbase.py:1202\u001b[0m, in \u001b[0;36mKernel.raw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1200\u001b[0m     msg \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1201\u001b[0m     \u001b[39mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[1;32m-> 1202\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_input_request(\n\u001b[0;32m   1203\u001b[0m     \u001b[39mstr\u001b[39m(prompt),\n\u001b[0;32m   1204\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_parent_ident[\u001b[39m\"\u001b[39m\u001b[39mshell\u001b[39m\u001b[39m\"\u001b[39m],\n\u001b[0;32m   1205\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_parent(\u001b[39m\"\u001b[39m\u001b[39mshell\u001b[39m\u001b[39m\"\u001b[39m),\n\u001b[0;32m   1206\u001b[0m     password\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[0;32m   1207\u001b[0m )\n",
+      "File \u001b[1;32mc:\\Users\\wilto\\anaconda3\\envs\\DevWilton\\Lib\\site-packages\\ipykernel\\kernelbase.py:1245\u001b[0m, in \u001b[0;36mKernel._input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1242\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1243\u001b[0m     \u001b[39m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[0;32m   1244\u001b[0m     msg \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mInterrupted by user\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m-> 1245\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyboardInterrupt\u001b[39;00m(msg) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m   1246\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m:\n\u001b[0;32m   1247\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlog\u001b[39m.\u001b[39mwarning(\u001b[39m\"\u001b[39m\u001b[39mInvalid Message:\u001b[39m\u001b[39m\"\u001b[39m, exc_info\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
